--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4575,10 +4575,10 @@ Home Banner Three Area CSS
   height: 275px;
   left: 0;
   bottom: -200px;
-  border-right: 2px solid #777986;
+  /* border-right: 2px solid #777986;
   border-bottom: 2px solid #777986;
   border-left: 2px solid #777986;
-  border-radius: 0 0 50px 50px;
+  border-radius: 0 0 50px 50px; */
 }
 .home-banner-three .banner-bar::after {
   position: absolute;
